<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idCorreoElectronico"
        android:layout_width="479dp"
        android:layout_height="61dp"
        android:text="@string/correo_electronico"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/idIngCorreoElectronico"
        android:layout_width="478dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/idCuilCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuil_cuit"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/idIngCuilCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/idMoneda"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/idGroupMoneda"
        android:layout_width="566dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/idDolar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dolar_" />

        <RadioButton
            android:id="@+id/idPesoArgentino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peso_argentino" />
    </RadioGroup>

    <TextView
        android:id="@+id/idMontoAinvertir"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:text="@string/monto_a_invertir"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/idIngMontoAinvertir"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/idDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_dias"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/idIngDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/idMostrarDias"
        android:layout_width="362dp"
        android:layout_height="36dp"
        android:text="@string/dias_seleccionados" />

    <TextView
        android:id="@+id/idMostrarInteres"
        android:layout_width="364dp"
        android:layout_height="32dp"
        android:text="@string/mostrar_interes" />

    <LinearLayout
        android:id="@+id/idContenedorAvisar"
        android:layout_width="569dp"
        android:layout_height="77dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idAvisarPorMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avisar_por_mail_antes_de_vencimiento"
            android:textSize="24sp" />

        <SeekBar
            android:id="@+id/idIngAvisarPorMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="180"
            android:progress="10"/>

        <ToggleButton
            android:id="@+id/idAcreditarEnCuenta"
            android:layout_width="428dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/acreditar_en_cuenta"
            android:textOn="@string/BotonRenovacion"
            android:textOff="@string/acreditar_en_cuenta"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/idGroupTerminosCondiciones"
        android:layout_width="583dp"
        android:layout_height="41dp">

        <CheckBox
            android:id="@+id/idIngTerminosCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar_terminos_y_condiciones" />
    </RadioGroup>

    <Button
        android:id="@+id/idHacerPlazoFijo"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:text="@string/hacer_plazo_fijo" />


    <TextView
        android:id="@+id/idInfoFinal"
        android:layout_width="568dp"
        android:layout_height="111dp"
        android:layout_weight="1"
        android:maxLines="6"
        android:text="@string/info_final" />

</LinearLayout>